# RAG

./: .gitignore  1-rag_evaluation.ipynb  app.py  main.py  pyproject.toml  requirements.txt
faiss_store/: faiss.index  metadata.pkl
notebook/: document.ipynb  pdf_loader.ipynb
src/: search.py
