[project]
name = "tradrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "langsmith>=0.9.7",
    "lxml>=6.1.1",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "transformers>=5.12.1",
    "typesense>=2.0.0",
]
